testing_temp/temp-compiler_output__Time_Length_uint32_float32__.txt
testing_temp\temp-test__Time_Length_uint32_float32__.cpp: In function 'int main(int, char**)':
testing_temp\temp-test__Time_Length_uint32_float32__.cpp:9:64: error: invalid use of incomplete type 'struct dim_analysis::Unmatched_dimensions_in_addition_between<unsigned int, Dimensions<std::ratio<0ll>, std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, float, Dimensions<std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
             std::cout << (uint32<Time>(16) + float32<Length>(32)) << std::endl;;std::cout << (uint32<Time>(32) - float32<Length>(16));;
                                                                ^
In file included from testing_temp\temp-test__Time_Length_uint32_float32__.cpp:3:0:
testing_temp\../dimensional_analysis.h:242:26: note: declaration of 'struct dim_analysis::Unmatched_dimensions_in_addition_between<unsigned int, Dimensions<std::ratio<0ll>, std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, float, Dimensions<std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
   SAME_UNITS_OPERATOR(+, Unmatched_dimensions_in_addition_between)
                          ^
testing_temp\../dimensional_analysis.h:194:94: note: in definition of macro 'SAME_UNITS_OPERATOR'
    template<typename NumT_lhs, typename DimsLhs, typename NumT_rhs, typename DimsRhs> struct ERROR_MESSAGE;\
                                                                                              ^~~~~~~~~~~~~
testing_temp\temp-test__Time_Length_uint32_float32__.cpp:9:132: error: invalid use of incomplete type 'struct dim_analysis::Unmatched_dimensions_in_subtraction_between<unsigned int, Dimensions<std::ratio<0ll>, std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, float, Dimensions<std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
             std::cout << (uint32<Time>(16) + float32<Length>(32)) << std::endl;;std::cout << (uint32<Time>(32) - float32<Length>(16));;
                                                                                                                                    ^
In file included from testing_temp\temp-test__Time_Length_uint32_float32__.cpp:3:0:
testing_temp\../dimensional_analysis.h:243:26: note: declaration of 'struct dim_analysis::Unmatched_dimensions_in_subtraction_between<unsigned int, Dimensions<std::ratio<0ll>, std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, float, Dimensions<std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
   SAME_UNITS_OPERATOR(-, Unmatched_dimensions_in_subtraction_between)
                          ^
testing_temp\../dimensional_analysis.h:194:94: note: in definition of macro 'SAME_UNITS_OPERATOR'
    template<typename NumT_lhs, typename DimsLhs, typename NumT_rhs, typename DimsRhs> struct ERROR_MESSAGE;\
                                                                                              ^~~~~~~~~~~~~
